do asked quick fixings: fix large whitespace above bottom-div class and image-div,fix the search icon position

--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body{
     background: url(images/expedition_hero.jpg) top center no-repeat;
-    background-size: 100% 520px; 
+    background-size: 100% 540px; 
     font-family: 'Barlow', sans-serif;
    
 }
 
-footer{font-family: sans-serif;}
+footer{
+    font-family: sans-serif;
+}
 
 ul{
     list-style: none;
@@ -65,22 +67,33 @@ ul{
     text-decoration-line: none;
 }
 .fab.fa-apple{
-    
     font-size: 2em;
 }
+
 .search-bar{
-    margin: 0.3em;
-    border: 0.1em solid rgb(73, 72, 72);
-    border-radius: 1em;
+    margin-top: 0.3em;
+    margin-right:0.3em;
+    border-top: 0.1em solid rgb(73, 72, 72);
+    border-bottom: 0.1em solid rgb(73, 72, 72);
+    border-right: 0.1em solid rgb(73, 72, 72);
+    border-left:none;
+    border-radius: 0 1em 1em 0 ;
     background: inherit;
     height: 2em;
     
 }
+.navbar-button{
+    margin-top: 0.3em;
+    border-top: 0.1em solid rgb(73, 72, 72);
+    border-bottom: 0.1em solid rgb(73, 72, 72);
+    border-left: 0.1em solid rgb(73, 72, 72);
+    border-right: none;
+    border-radius: 1em 0 0 1em ;
+    background: inherit;
+    height: 2.35em;
+}
 .fas.fa-search{
     font-size: 0.8em;
-    position:absolute;
-    right:23em;
-    top:6em;
 }
 
 
